ui/assets/styles/hc-dark.css
/* ... */
  .sidebar-nav-toggle + div {
    flex-shrink: 1; }

.form-grid {
  display: grid;
  padding: 5px;
  row-gap: 10px;
  column-gap: 10px;
  grid-template-columns: minmax(15%, max-content) auto; }
  .form-grid.label-width-true {
    grid-template-columns: max-content auto; }
  .form-grid > label {
    line-height: 24px;
    text-align: right;
    word-wrap: break-word; }
  .form-grid .form-actions,
  .form-grid .form-field,
  .form-grid .field-fluid {
    grid-column: 2 / -1;
    text-align: left;
    line-height: 24px; }
  .form-grid .form-actions button:not(:first-of-type) {
    margin-left: 10px; }
  .form-grid .form-field.offset-1 {
    grid-column-start: 2 !important; }
  .form-grid .form-field.offset-2 {
    grid-column-start: 3 !important; }
  .form-grid .form-field.offset-3 {
    grid-column-start: 4 !important; }
  .form-grid .form-field table {
    width: 100%; }
  .form-grid .form-field td {
    padding: 0 5px 5px 0; }
  .form-grid .form-field .list-check-radio {
    line-height: 1.4em; }
  .form-grid.form-grid-1-1 {
    grid-template-columns: repeat(2, minmax(15%, max-content) auto); }
    .form-grid.form-grid-1-1.label-width-true {
      grid-template-columns: repeat(2, max-content auto); }
  .form-grid.form-grid-3-1 {
    grid-template-columns: minmax(15%, max-content) 3fr max-content auto; }
    .form-grid.form-grid-3-1.label-width-true {
      grid-template-columns: max-content auto 3fr max-content auto; }
  .form-grid.form-grid-1-1 .form-field:not(.field-fluid), .form-grid.form-grid-3-1 .form-field:not(.field-fluid) {
    grid-column-start: initial;
    grid-column-end: span 1; }
  .form-grid .table-forms-separator {
    display: inline-flex;
    line-height: 1.4; }
    .form-grid .table-forms-separator td {
      padding: 5px 5px 5px 0; }

.btn-add,
.btn-edit,
.btn-import, .btn-remove, .overlay-close-btn, .subfilter-disable-btn {
  display: inline-block;
  width: 18px;
  height: 18px;
  min-height: auto;
  padding: 0;
  line-height: 18px;
  text-decoration: none;
  vertical-align: middle;
  cursor: pointer;
  background-color: transparent;
  border: 0;
  border-radius: 2px;
  opacity: .5;
  transition: opacity .2s ease-out; }
  .btn-add:hover,
  .btn-edit:hover,
  .btn-import:hover, .btn-remove:hover, .overlay-close-btn:hover, .subfilter-disable-btn:hover, .btn-add:focus,
  .btn-edit:focus,
  .btn-import:focus, .btn-remove:focus, .overlay-close-btn:focus, .subfilter-disable-btn:focus, .btn-add:active,
  .btn-edit:active,
  .btn-import:active, .btn-remove:active, .overlay-close-btn:active, .subfilter-disable-btn:active {
    text-decoration: none;
    background-color: transparent;
    outline: none;
    opacity: 1; }

.btn-remove, .overlay-close-btn, .subfilter-disable-btn {
  font-size: 1.5em;
  font-weight: bold;
  color: #cacaca;
  text-align: center;
  cursor: pointer; }
  .btn-remove::before, .overlay-close-btn::before, .subfilter-disable-btn::before {
    content: '\00d7'; }
  .btn-remove:hover, .overlay-close-btn:hover, .subfilter-disable-btn:hover, .btn-remove:focus, .overlay-close-btn:focus, .subfilter-disable-btn:focus, .btn-remove:active, .overlay-close-btn:active, .subfilter-disable-btn:active {
    color: #cacaca;
    outline: none; }

.btn-add,
.btn-edit,
.btn-import {
  background-image: url("../img/icon-sprite.svg?20211222");
  background-repeat: no-repeat; }
  .btn-add::-moz-focus-inner,
  .btn-edit::-moz-focus-inner,
  .btn-import::-moz-focus-inner {
    padding: 0; }
  .btn-add:not(:first-child),
  .btn-edit:not(:first-child),
  .btn-import:not(:first-child) {
    margin-left: 5px; }

.btn-add {
  background-position: -45px -550px; }

.btn-edit {
  background-position: -45px -477px; }

.btn-import {
  background-position: -45px -514px; }

.btn-remove:not(:first-child) {
  margin-left: 5px; }

.btn-add[disabled], .btn-add[disabled]:hover,
.btn-edit[disabled],
.btn-edit[disabled]:hover,
.btn-remove[disabled],
.btn-remove[disabled]:hover {
  background-color: transparent;
  opacity: .25; }

.overlay-close-btn {
  position: absolute;
  top: 1px;
  right: 1px;
  z-index: 1000; }

.subfilter-disable-btn {
  margin: 0;
  color: #ffffff;
  background-color: #dddddd;
  opacity: 1; }
  .subfilter-disable-btn:hover {
    color: #f2f2f2; }
  .subfilter-disable-btn:focus, .subfilter-disable-btn:active {
    color: #e6e6e6; }

.color-picker .color-picker-preview,
.color-picker-dialogue .color-picker-preview {
  position: relative;
  background: url("../img/icon-sprite.svg?20211222") no-repeat -323px -411px;
  border: 1px solid #666666;
  color: #ffffff;
  vertical-align: inherit; }
.color-picker .use-default,
.color-picker-dialogue .use-default {
  background: none; }
  .color-picker .use-default::after,
  .color-picker-dialogue .use-default::after {
    content: attr(data-use-default);
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    text-align: center; }

.color-picker {
  display: inline-block;
  line-height: 1.2;
  vertical-align: sub; }
  .color-picker .color-picker-preview {
    padding: 0;
    background-position: -321px -409px;
    width: 24px; }
    .color-picker .color-picker-preview:after {
      line-height: 22px; }
  .color-picker input:disabled + button {
    pointer-events: none;
    background: #7d7d7d !important;
    border-color: #7d7d7d; }

.color-picker-dialogue > div:first-of-type {
  margin-bottom: 5px; }
.color-picker-dialogue > div:not(:first-of-type) button {
  padding: 0;
  width: 20px;
  min-height: 20px;
  border: 1px solid #000000;
  border-radius: 0;
  vertical-align: middle;
  transition: none; }
  .color-picker-dialogue > div:not(:first-of-type) button:hover, .color-picker-dialogue > div:not(:first-of-type) button:focus {
    border-color: #bbbbbb;
    box-shadow: inset 0 0 0 1px #000000; }
  .color-picker-dialogue > div:not(:first-of-type) button:active {
    box-shadow: inset 0 0 0 2px #000000; }
.color-picker-dialogue .color-picker-input {
  position: relative;
  display: inline-block;
  margin-right: 3px; }
/* ... */

